--- a/index.html
+++ b/index.html
@@ -11,32 +11,38 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
 
   <body>
     <!-- heder -->
     <header>
       <nav>
-        <a href="./index.html" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo"><span class="logo-style">Web</span>Studio</a>
+        
         <ul class="list">
           <li><a href="./index.html" class="nav-link">Studio</a></li>
           <li><a href="./portfolio.html" class="nav-link">Portfolio</a></li>
           <li><a href="#contacts" class="nav-link">Contacts</a></li>
         </ul>
       </nav>
+
       <address>
+
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="contacts-link"
+            <a href="mailto:info@devstudio.com" class="contacts-list"
               >info@devstudio.com</a
             >
           </li>
+
           <li>
-            <a href="tel:+110001111111" class="contacts-link"
+            <a href="tel:+110001111111" class="contacts-list"
               >+11 (000) 111-11-11</a
             >
           </li>
         </ul>
+
       </address>
     </header>
     <main>
@@ -45,8 +51,9 @@
         <h1 class="hero-titel">Effective Solutions for Your Business</h1>
         <button class="hero-btn" type="button">Order Service</button>
       </section>
+      
       <!-- section-2  Оur Advantages-->
-      <section>
+      <section class="advantages">
         <h2 class="visually-hidden">Our advantages</h2>
         <ul class="list">
           <li>
