--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,55 +11,57 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <!-- heder -->
     <header>
-
       <nav>
-        <a href="./index.html" class="logo"><span class="logo-stile">Web</span>Studio</a>
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-style">Studio</span></a
+        >
+
         <ul class="list">
-          <li><a href="./index.html" class="nav-list">Studio</a></li>
-          <li><a href="./index.html" class="nav-list">Portfolio</a></li>
-          <li><a href="#contacts" class="nav-list">Contacts</a></li>
+          <li><a href="./index.html" class="nav-link">Studio</a></li>
+          <li><a href="./index.html" class="nav-link">Portfolio</a></li>
+          <li><a href="#contacts" class="nav-link">Contacts</a></li>
         </ul>
       </nav>
 
-      <ul class="list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="contacts-list"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+110001111111" class="contacts-list"
-            >+11 (000) 111-11-11</a
-          >
-        </li>
-      </ul>
+      <address>
+        <ul class="list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="contacts-list"
+              >info@devstudio.com</a
+            >
+          </li>
 
+          <li>
+            <a href="tel:+110001111111" class="contacts-list"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </address>
     </header>
 
     <main>
-
+      <!-- Portfolio -->
       <section>
         <h1 class="visually-hidden">Portfolio</h1>
 
         <ul class="list">
-          <li><button type="button" class="portfolio-btn oll">All</button></li>
+          <li><button type="button" class="portfolio-btn all">All</button></li>
 
           <li>
-            <button type="button" class="portfolio-btn web-sites">
+            <button type="button" class="portfolio-btn web-site">
               Web Site
             </button>
           </li>
 
           <li>
-            <button type="button" class="portfolio-btn applications">
-              App
-            </button>
+            <button type="button" class="portfolio-btn app">App</button>
           </li>
 
           <li>
@@ -67,7 +69,7 @@
           </li>
 
           <li>
-            <button type="button" class="portfolio-btn markiting">
+            <button type="button" class="portfolio-btn marketing">
               Marketing
             </button>
           </li>
@@ -82,10 +84,10 @@
                 width="360"
                 height="300"
               />
-              <h2 class="portfolio-list-titel">
+              <h2 class="sub-titel-text-styles">
                 Banking App Interface Concept
               </h2>
-              <p class="portfolio-list-text">App</p>
+              <p class="mein-text-style">App</p>
             </a>
           </li>
 
@@ -97,8 +99,8 @@
                 width="360"
                 height="300"
               />
-              <h2 class="portfolio-list-titel">Cashless Payment</h2>
-              <p class="portfolio-list-text">Marketing</p>
+              <h2 class="sub-titel-text-styles">Cashless Payment</h2>
+              <p class="mein-text-style">Marketing</p>
             </a>
           </li>
 
@@ -110,8 +112,8 @@
                 width="360"
                 height="300"
               />
-              <h2 class="portfolio-list-titel">Meditation App</h2>
-              <p class="portfolio-list-text">App</p>
+              <h2 class="sub-titel-text-styles">Meditation App</h2>
+              <p class="mein-text-style">App</p>
             </a>
           </li>
 
@@ -123,8 +125,8 @@
                 width="360"
                 height="300"
               />
-              <h2 class="portfolio-list-titel">Taxi Service</h2>
-              <p class="portfolio-list-text">Marketing</p>
+              <h2 class="sub-titel-text-styles">Taxi Service</h2>
+              <p class="mein-text-style">Marketing</p>
             </a>
           </li>
 
@@ -136,8 +138,8 @@
                 width="360"
                 height="300"
               />
-              <h2 class="portfolio-list-titel">Screen Illustrations</h2>
-              <p class="portfolio-list-text">Design</p>
+              <h2 class="sub-titel-text-styles">Screen Illustrations</h2>
+              <p class="mein-text-style">Design</p>
             </a>
           </li>
 
@@ -149,8 +151,8 @@
                 width="360"
                 height="300"
               />
-              <h2 class="portfolio-list-titel">Online Courses</h2>
-              <p class="portfolio-list-text">Marketing</p>
+              <h2 class="sub-titel-text-styles">Online Courses</h2>
+              <p class="mein-text-style">Marketing</p>
             </a>
           </li>
 
@@ -162,8 +164,8 @@
                 width="360"
                 height="300"
               />
-              <h2 class="portfolio-list-titel">Instagram Stories Concept</h2>
-              <p class="portfolio-list-text">Design</p>
+              <h2 class="sub-titel-text-styles">Instagram Stories Concept</h2>
+              <p class="mein-text-style">Design</p>
             </a>
           </li>
 
@@ -175,8 +177,8 @@
                 width="360"
                 height="300"
               />
-              <h2 class="portfolio-list-titel">Organic Food</h2>
-              <p class="portfolio-list-text">Web Site</p>
+              <h2 class="sub-titel-text-styles">Organic Food</h2>
+              <p class="mein-text-style">Web Site</p>
             </a>
           </li>
 
@@ -188,25 +190,22 @@
                 width="360"
                 height="300"
               />
-              <h2 class="portfolio-list-titel">Fresh Coffee</h2>
-              <p class="portfolio-list-text">Web Site</p>
+              <h2 class="sub-titel-text-styles">Fresh Coffee</h2>
+              <p class="mein-text-style">Web Site</p>
             </a>
           </li>
-
         </ul>
       </section>
-
     </main>
     <!-- footer -->
     <footer class="footer">
-
-      <a href="./portfolio.html">WebStudio</a>
-      <p>
+      <a href="./index.html" class="logo"
+        >Web<span class="footer-logo-style">Studio</span></a
+      >
+      <p class="footer-text mein-text-style">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
-
     </footer>
-
   </body>
 </html>
