--- a/portfolio.html
+++ b/portfolio.html
@@ -18,27 +18,27 @@
     <!-- heder -->
     <header>
       <nav>
-        <a href="./index.html" class="logo"
+        <a href="./index.html" class="logo link"
           >Web<span class="logo-style">Studio</span></a
         >
 
         <ul class="list">
-          <li><a href="./index.html" class="nav-link">Studio</a></li>
-          <li><a href="./index.html" class="nav-link">Portfolio</a></li>
-          <li><a href="#contacts" class="nav-link">Contacts</a></li>
+          <li><a href="./index.html" class="nav-link link">Studio</a></li>
+          <li><a href="./portfolio.html" class="nav-link link">Portfolio</a></li>
+          <li><a href="" class="nav-link link">Contacts</a></li>
         </ul>
       </nav>
 
-      <address>
+      <address class="concacts">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="contacts-list"
+            <a href="mailto:info@devstudio.com" class="contacts-list link"
               >info@devstudio.com</a
             >
           </li>
 
           <li>
-            <a href="tel:+110001111111" class="contacts-list"
+            <a href="tel:+110001111111" class="contacts-list link"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -49,7 +49,7 @@
     <main>
       <!-- Portfolio -->
       <section>
-        <h1 class="visually-hidden">Portfolio</h1>
+        <h1 hidden class="visually-hidden">Portfolio</h1>
 
         <ul class="list">
           <li><button type="button" class="portfolio-btn all">All</button></li>
@@ -77,7 +77,7 @@
 
         <ul class="list">
           <li class="portfolio-list">
-            <a href="" class="portfolio-link">
+            <a href="" class="link">
               <img
                 src="./images/portfolio/app-1.jpg"
                 alt="banking application image"
@@ -92,7 +92,7 @@
           </li>
 
           <li>
-            <a href="" class="portfolio-link"
+            <a href="" class="link"
               ><img
                 src="./images/portfolio/marketing-1.jpg"
                 alt="phone scanning qr code"
@@ -105,7 +105,7 @@
           </li>
 
           <li class="portfolio-list">
-            <a href="" class="portfolio-link"
+            <a href="" class="link"
               ><img
                 src="./images/portfolio/app-2.jpg"
                 alt="laptop and phone"
@@ -118,7 +118,7 @@
           </li>
 
           <li class="portfolio-list">
-            <a href="" class="portfolio-link"
+            <a href="" class="link"
               ><img
                 src="./images/portfolio/marketing-2.jpg"
                 alt="man driving a car"
@@ -131,7 +131,7 @@
           </li>
 
           <li class="portfolio-list">
-            <a href="" class="portfolio-link"
+            <a href="" class="link"
               ><img
                 src="./images/portfolio/design-1.jpg"
                 alt="beautiful theme for phone"
@@ -144,7 +144,7 @@
           </li>
 
           <li class="portfolio-list">
-            <a href="" class="portfolio-link"
+            <a href="" class="link"
               ><img
                 src="./images/portfolio/marketing-3.jpg"
                 alt="happy girl"
@@ -157,7 +157,7 @@
           </li>
 
           <li class="portfolio-list">
-            <a href="" class="portfolio-link"
+            <a href="" class="link"
               ><img
                 src="./images/portfolio/design-2.jpg"
                 alt="Instagram Stories Concept"
@@ -170,7 +170,7 @@
           </li>
 
           <li class="portfolio-list">
-            <a href="" class="portfolio-link"
+            <a href="" class="link"
               ><img
                 src="./images/portfolio/website-1.jpg"
                 alt="girl with fresh vegetables"
@@ -183,7 +183,7 @@
           </li>
 
           <li class="portfolio-list">
-            <a href="" class="portfolio-link"
+            <a href="" class="link"
               ><img
                 src="./images/portfolio/website-2.jpg"
                 alt="freshly made coffee"
@@ -200,7 +200,7 @@
     <!-- footer -->
     <footer class="footer">
       <a href="./index.html" class="logo"
-        >Web<span class="footer-logo-style">Studio</span></a
+        >Web<span class="footer-logo-style link">Studio</span></a
       >
       <p class="footer-text mein-text-style">
         Increase the flow of customers and sales for your business with digital
