--- a/portfolio.html
+++ b/portfolio.html
@@ -52,24 +52,24 @@
         <h1 hidden class="visually-hidden">Portfolio</h1>
 
         <ul class="list">
-          <li><button type="button" class="portfolio-btn all-btn">All</button></li>
+          <li><button type="button" class="portfolio-btn">All</button></li>
 
           <li>
-            <button type="button" class="portfolio-btn web-site-btn">
+            <button type="button" class="portfolio-btn">
               Web Site
             </button>
           </li>
 
           <li>
-            <button type="button" class="portfolio-btn app-btn">App</button>
+            <button type="button" class="portfolio-btn">App</button>
           </li>
 
           <li>
-            <button type="button" class="portfolio-btn design-btn">Design</button>
+            <button type="button" class="portfolio-btn">Design</button>
           </li>
 
           <li>
-            <button type="button" class="portfolio-btn marketing-btn">
+            <button type="button" class="portfolio-btn">
               Marketing
             </button>
           </li>
