--- a/portfolio.html
+++ b/portfolio.html
@@ -52,24 +52,24 @@
         <h1 hidden class="visually-hidden">Portfolio</h1>
 
         <ul class="list">
-          <li><button type="button" class="portfolio-btn">All</button></li>
+          <li><button type="button" class="portfolio-btn all">All</button></li>
 
           <li>
-            <button type="button" class="portfolio-btn">
+            <button type="button" class="portfolio-btn web-site">
               Web Site
             </button>
           </li>
 
           <li>
-            <button type="button" class="portfolio-btn">App</button>
+            <button type="button" class="portfolio-btn app">App</button>
           </li>
 
           <li>
-            <button type="button" class="portfolio-btn">Design</button>
+            <button type="button" class="portfolio-btn design">Design</button>
           </li>
 
           <li>
-            <button type="button" class="portfolio-btn">
+            <button type="button" class="portfolio-btn marketing">
               Marketing
             </button>
           </li>
@@ -199,8 +199,8 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo link"
-        >Web<span class="footer-logo-style">Studio</span></a
+      <a href="./index.html" class="logo "
+        >Web<span class="footer-logo-style link">Studio</span></a
       >
       <p class="footer-text mein-text-style">
         Increase the flow of customers and sales for your business with digital
