--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <!-- heder -->
     <header>
       <nav>
-        <a href="./index.html" class="logo link">Web<span class="logo-style">Studio</span></a>
-        
+        <a href="./index.html" class="logo link"
+          >Web<span class="logo-style">Studio</span></a
+        >
+
         <ul class="list">
           <li><a href="./index.html" class="nav-link link">Studio</a></li>
-          <li><a href="./portfolio.html" class="nav-link link">Portfolio</a></li>
+          <li>
+            <a href="./portfolio.html" class="nav-link link">Portfolio</a>
+          </li>
           <li><a href="" class="nav-link link">Contacts</a></li>
         </ul>
       </nav>
@@ -42,7 +46,6 @@
           </li>
         </ul>
       </address>
-
     </header>
 
     <main>
@@ -51,7 +54,7 @@
         <h1 class="hero-titel">Effective Solutions for Your Business</h1>
         <button class="hero-btn" type="button">Order Service</button>
       </section>
-      
+
       <!-- section-2  Оur Advantages-->
       <section class="advantages-section">
         <h2 hidden class="visually-hidden">Our advantages</h2>
@@ -167,8 +170,10 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo link">Web<span class="footer-logo-style">Studio</span></a>
-      <p class="  footer-text mein-text-style">
+      <a href="./index.html" class="logo link"
+        >Web<span class="footer-logo-style">Studio</span></a
+      >
+      <p class="footer-text mein-text-style">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
