--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,9 @@
 
         <ul class="list">
           <li><a href="./index.html" class="nav-link link">Studio</a></li>
-          <li><a href="./portfolio.html" class="nav-link link">Portfolio</a></li>
+          <li>
+            <a href="./portfolio.html" class="nav-link link">Portfolio</a>
+          </li>
           <li><a href="" class="nav-link link">Contacts</a></li>
         </ul>
       </nav>
@@ -52,26 +54,22 @@
         <h1 hidden class="visually-hidden">Portfolio</h1>
 
         <ul class="list">
-          <li><button type="button" class="portfolio-btn all">All</button></li>
+          <li><button type="button" class="portfolio-btn">All</button></li>
 
           <li>
-            <button type="button" class="portfolio-btn web-site">
-              Web Site
-            </button>
+            <button type="button" class="portfolio-btn">Web Site</button>
           </li>
 
           <li>
-            <button type="button" class="portfolio-btn app">App</button>
+            <button type="button" class="portfolio-btn">App</button>
           </li>
 
           <li>
-            <button type="button" class="portfolio-btn design">Design</button>
+            <button type="button" class="portfolio-btn">Design</button>
           </li>
 
           <li>
-            <button type="button" class="portfolio-btn marketing">
-              Marketing
-            </button>
+            <button type="button" class="portfolio-btn">Marketing</button>
           </li>
         </ul>
 
@@ -199,8 +197,8 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo "
-        >Web<span class="footer-logo-style link">Studio</span></a
+      <a href="./index.html" class="logo link"
+        >Web<span class="footer-logo-style">Studio</span></a
       >
       <p class="footer-text mein-text-style">
         Increase the flow of customers and sales for your business with digital
